teaching/FE/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
    env: prod
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    livenessProbe:
      httpGet:
        path: /index.html
        port: 80
      initialDelaySeconds: 3
      timeoutSeconds: 1
      periodSeconds: 5
      failureThreshold: 2
    ports:
      - containerPort: 80
