teaching/FE/pod3.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod3
  labels:
    app: my-nginx
spec:
  containers:
    - image: nginx:1.7.9
      name: test
      # resources:
      #   requests:
      #     cpu: "500m"
      #     memory: "128Mi"
      #   limits:
      #     cpu: "1000m"
      #     memory: 500Mi"
      ports:
        - containerPort: 80
