teaching/FE/pod4.yml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  labels:
    app: ubuntu
    env: prod
spec:
  containers:
  - name: ubuntu
    image: ubuntu:latest
    ports:
      - containerPort: 80
    command: ["/bin/bash", "-c"]
    args:
      - tail -f /dev/null
