teaching/FE/testpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test
  labels:
    name: test
spec:
  containers:
  - name: test
    image: busybox:1.28
    command:
      - "/bin/sh"
      - "-c"
    args:
      - "tail -f /dev/null"
      # - "while sleep 0.01; do wget -q -O- http://php-apache; done"
