teaching/FE/testpod2.yml
apiVersion: v1
kind: Pod
metadata:
  name: test2
  labels:
    name: test
spec:
  nodeSelector:
    kubernetes.io/hostname: minikube-m03
  containers:
  - name: test
    image: alpine:latest
    command:
      - "/bin/sh"
      - "-c"
    args:
      - "tail -f /dev/null"
      # - "while sleep 0.01; do wget -q -O- http://php-apache; done"
